...


@Composable
fun CheckItemRow(
    title: String? = null,
    contents: String,
    positiveText: String = "동의",
    negativeText: String = "미동의",
    isChecked: Boolean,
    onCheckedChange: (Boolean) -> Unit
) {
    val outlineColor = MaterialTheme.colorScheme.outline

...
