...
                Checkbox(
                    checked = allRequiredChecked,
                    modifier = Modifier.padding(end = Dimen.spaceM),
                    onCheckedChange = null
                )
                TextDynamic(
                    text = "전체동의",
                    type = TextType.BodyLarge,
                    color = MaterialTheme.colorScheme.onPrimary,
                    fontWeight = FontWeight.Bold
                )
            }
            Spacer(modifier = Modifier.height(Dimen.spaceM))
...
