...
        modifier = modifier
            .fillMaxWidth()
            .padding(Dimen.spaceL)
    ) {
        Button(
            onClick = onClick,
            modifier = Modifier.fillMaxWidth().testTag("Base_Bottom_Button"),
            enabled = enable,
        ) {
            TextDynamic(text = text, color = MaterialTheme.colorScheme.onPrimary)
        }
    }
}
