...
@Preview(apiLevel = 34)
@Composable
fun SuitabilityContentPreview() {
    SuitabilityContentHeader(
        name = "홍길동",
        residentialNumber = "1234561234567",
        phoneNumber = "01012345678"
    )
}
